[TASK] Reworking translations

--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -60,7 +60,7 @@
 			</trans-unit>
 
 			<trans-unit id="tt_content.list_type_pi1">
-				<target>Tabellenansicht</target>
+				<target>Wochenansicht</target>
 			</trans-unit>
 			<trans-unit id="tt_content.list_type_pi2">
 				<target>Aktueller Öffnungszeitraum als Text</target>
